tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__diagnose__contract_diagnose_broken_links_help.snap
---
source: tests/e2e/machine_contract/diagnose.rs
expression: stdout
---
Diagnose broken links (unresolved and ambiguous)

Usage: obsidian-cli-inspector diagnose broken-links [OPTIONS]

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
