tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__diagnose__contract_diagnose_help.snap
---
source: tests/e2e/machine_contract/diagnose.rs
expression: stdout
---
Diagnostic commands

Usage: obsidian-cli-inspector diagnose [OPTIONS] <COMMAND>

Commands:
  orphans       Diagnose orphan notes (no incoming + no outgoing links)
  broken-links  Diagnose broken links (unresolved and ambiguous)
  help          Print this message or the help of the given subcommand(s)

Options:
  -o, --output <FORMAT>  Output in JSON format (for machine integration)
  -h, --help             Print help
