tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__diagnose__contract_diagnose_orphans_help.snap
---
source: tests/e2e/machine_contract/diagnose.rs
expression: stdout
---
Diagnose orphan notes (no incoming + no outgoing links)

Usage: obsidian-cli-inspector diagnose orphans [OPTIONS]

Options:
      --exclude-templates  Exclude template notes
      --exclude-daily      Exclude daily notes
  -o, --output <FORMAT>    Output in JSON format (for machine integration)
  -h, --help               Print help
