tests/e2e/machine_contract/snapshots/e2e__e2e_tests__machine_contract__diagnose__machine_contract_orphans.snap
---
source: tests/e2e/machine_contract/diagnose.rs
expression: normalize_for_snapshot(output)
---
{
  "command": "diagnose.orphans",
  "meta": {
    "query_time_ms": 0,
    "vault_path": "./tests/test-vault"
  },
  "params": {
    "exclude_daily": false,
    "exclude_templates": false
  },
  "result": {
    "status": "success"
  },
  "timestamp": "TIMESTAMP"
}
